--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,24 @@
+# Build stage
+FROM node:20 AS build
+
+WORKDIR /app
+
+COPY package.json package-lock.json* ./
+RUN npm install
+
+COPY . .
+
+# --- NUEVO ---
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+# -------------
+
+RUN npm run build
+
+# Production stage
 FROM nginx:alpine
 
-WORKDIR /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
-COPY index.html .
-COPY styles.css .
-COPY app.js .
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
